# openapi.yaml
@@ -69,6 +69,65 @@ paths:
           description: Bad request
         '500':
           description: Internal server error
+  /models:
+    post:
+      summary: Add a new model
+      description: Adds a new model specified by the path to the model file as well as an identifier for future reference
+      operationId: addModel
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - model
+              properties:
+                model:
+                  $ref: '#/components/schemas/model'
+                reindex:
+                  type: boolean
+                  default: false
+      responses:
+        '200':
+          description: Registration successful
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+    delete:
+      summary: Remove a model
+      description: removes a model specified by the model name
+      operationId: removeModel
+      parameters:
+        - name: modelName
+          in: query
+          description: Model name
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Deletion successful
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+    get:
+      summary: List all models
+      description: Lists all registered models.
+      operationId: listModels
+      responses:
+        '200':
+          description: Get successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/model'
+        '500':
+          description: Internal server error
 
 components:
   schemas:
@@ -82,3 +141,20 @@ components:
         score:
           type: number
           format: double
+    model:
+      type: object
+      required:
+        - name
+        - modelPath
+        - tokenizerPath
+      properties:
+        name:
+          type: string
+          maxLength: 50
+          minLength: 1
+        modelPath:
+          type: string
+          maxLength: 4096
+        tokenizerPath:
+          type: string
+          maxLength: 4096
